Completed the BMI Functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,26 @@
     <title>Application Home Page</title>
 </head>
 <body>
-    <h2>
-        Hello World!
-    </h2>
+    <h1>
+        PPA #2 Web Format API
+    </h1>
+    <p>
+        This application uses the previous utilized api from PPA #1 and builds 
+        upon it used database functionality and a RESTful API.<br>
+        <br>
+
+        The two functions used we implemented were BMI and EmailVerifier.
+    </p>
+    <h3>
+        BMI Function
+    </h3>
+    <a href="/post-bmi">POST</a>
+    <a href="/get-bmi">GET</a>
+    <h3>
+        Email Verifier Function
+    </h3>
+    <a href="">POST</a>
+    <a href="">GET</a>
+</script>
 </body>
 </html>
