Email Web App Functionality Implemented

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,8 +23,8 @@
     <h3>
         Email Verifier Function
     </h3>
-    <a href="">POST</a>
-    <a href="">GET</a>
+    <a href="/post-email">POST</a>
+    <a href="/get-email">GET</a>
 </script>
 </body>
 </html>
